force-app/main/default/objects/Room__c/Room__c.object-meta.xml
<CustomObject>
    <description>Represents an individual room within a property. Tracks room specifications, facilities, size, rent rate, and current occupancy status. Rolled up from Tenancy__c for active tenant count.</description>
    <label>Room</label>
    <nameField>
        <label>Room Number / Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>