force-app/main/default/objects/Room__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of the room including any specific notes for prospective tenants.</description>
    <label>Room Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>