force-app/main/default/objects/Room__c/fields/Facilities__c.field-meta.xml
<CustomField>
    <fullName>Facilities__c</fullName>
    <description>Amenities and facilities available in this room. Select all that apply.</description>
    <label>Facilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Wi-Fi</fullName>
            </value>
            <value>
                <fullName>Air Conditioning</fullName>
            </value>
            <value>
                <fullName>Heating</fullName>
            </value>
            <value>
                <fullName>Furnished</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>En-suite Bathroom</fullName>
            </value>
            <value>
                <fullName>Shared Bathroom</fullName>
            </value>
            <value>
                <fullName>Kitchen Access</fullName>
            </value>
            <value>
                <fullName>Laundry Access</fullName>
            </value>
            <value>
                <fullName>Television</fullName>
            </value>
            <value>
                <fullName>Balcony / Patio</fullName>
            </value>
            <value>
                <fullName>Garden Access</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Gym Access</fullName>
            </value>
            <value>
                <fullName>Swimming Pool</fullName>
            </value>
            <value>
                <fullName>Bills Included</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>