force-app/main/default/objects/Room__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <description>Floor level of the room (0 = ground floor, 1 = first floor, etc.).</description>
    <label>Floor Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>