force-app/main/default/objects/Room__c/fields/Number_of_Tenants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tenants__c</fullName>
    <description>Roll-up summary: number of active tenancies (tenants) currently in this room.</description>
    <label>Number of Active Tenants</label>
    <summaryFilterItems>
        <field>Tenancy__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Tenancy__c.Room__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>