force-app/main/default/objects/Room__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <description>Master-Detail relationship to the parent Property. Deleting a property will cascade-delete all its rooms.</description>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>Rooms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>