force-app/main/default/objects/Room__c/fields/Room_Size__c.field-meta.xml
<CustomField>
    <fullName>Room_Size__c</fullName>
    <description>Floor area of the room in square metres (m²).</description>
    <label>Room Size (m²)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>