force-app/main/default/objects/Room__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <description>Category of the room (e.g., Single, Double, Master, Studio).</description>
    <label>Room Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Twin</fullName>
            </value>
            <value>
                <fullName>Master Bedroom</fullName>
            </value>
            <value>
                <fullName>Ensuite</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Shared Room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>