force-app/main/default/objects/Room__c/fields/Weekly_Rent__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Rent__c</fullName>
    <description>The advertised weekly rent amount for this room. The actual agreed rent is stored on the Tenancy record.</description>
    <label>Advertised Weekly Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>